--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,19 @@
 plugins {
     id 'com.android.application'
 }
-apply plugin: 'kotlin-android'
-
-def apiKeyProperties = new Properties()
-apiKeyProperties.load(new FileInputStream(rootProject.file("api.properties")))
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.lifecycleweather"
-        minSdkVersion 21
+        applicationId "com.cs492.cocktailapp"
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        buildConfigField("String", "OPEN_WEATHER_API_KEY", apiKeyProperties['OPEN_WEATHER_API_KEY'])
     }
 
     buildTypes {
@@ -37,23 +31,11 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.android.volley:volley:1.1.1'
-
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'androidx.preference:preference:1.1.1'
-
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "androidx.core:core-ktx:+"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
-repositories {
-    mavenCentral()
 }
