--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs492.cocktailapp">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-feature android:name="android.hardware.type.watch" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,6 +17,11 @@
         android:theme="@style/Theme.CocktailApp">
 
         <activity
+            android:name=".ui.main.DetailedCocktailActivity"
+            android:label="@string/title_activity_detailed_cocktail"
+            android:parentActivityName=".ui.main.MainActivity">
+        </activity>
+        <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.CocktailApp.NoActionBar">
@@ -22,7 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
