--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    // JUnit 4 framework
+    testImplementation 'junit:junit:4.12'
+
 }
 
 repositories {
